user auth added

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,9 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-pandas==2.1.3
-mysql-connector-python==8.3.0
 python-dotenv==1.0.0
-timescaledb==2.9.0 
+mysql-connector-python==8.2.0
+pandas==2.1.3
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+email-validator==2.1.0.post1 
