--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -24,6 +24,9 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.7.2",
+    "react-beautiful-dnd": "^13.1.1"
   }
 }
