--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.7.2",
+    "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -24,9 +27,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "react-hot-toast": "^2.4.1",
-    "recharts": "^2.7.2",
-    "react-beautiful-dnd": "^13.1.1"
+    "vite": "^6.3.5"
   }
 }
